--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ categories = ["mathematics", "science"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.4"
+num-rational = "0.4"
+num-traits = "0.2"
 thiserror = "1.0.28"
 rayon = "1.5.1"
 opensrdk-linear-algebra = "0.8.2"
