--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ serde = { version = "1", features = ["derive"] }
 blas-src = { version = "0.8", features = ["intel-mkl"] } 
 lapack-src = { version = "0.8", features = ["intel-mkl"] }
 plotters = "0.3.1"
+ron = "0.8"
